##
## -*- cmake -*-
#===============================================================================
## @file CMakeLists.txt
## @description CMake rules to build Common Core Demo application
## @author Tor Slettnes <tor@slett.net>
#===============================================================================

add_subdirectory(api)
add_subdirectory(impl)
add_subdirectory(daemon)
add_subdirectory(utils)
