## -*- cmake -*-
#===============================================================================
## @file CMakeLists.txt
## @description CMake rules to build static/shared library
## @author Tor Slettnes <tor@slett.net>
#===============================================================================

add_subdirectory(tools)
add_subdirectory(io)
add_subdirectory(dataformats)
add_subdirectory(messaging)
